--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -9,15 +9,16 @@
     <PublishTrimmed>true</PublishTrimmed>
     <BlazorEnableCompression>true</BlazorEnableCompression>
     <InvariantGlobalization>true</InvariantGlobalization>
-	  <BlazorWasmPrerenderingEnvironment>Production</BlazorWasmPrerenderingEnvironment>
-	  <BlazorWebAssemblyPreserveCollationData>false</BlazorWebAssemblyPreserveCollationData>
-	  <BlazorWasmPrerenderingDeleteLoadingContents>true</BlazorWasmPrerenderingDeleteLoadingContents>
-	  <BlazorWasmPrerenderingMode>WebAssemblyPrerendered</BlazorWasmPrerenderingMode>
-	  <BlazorWasmPrerenderingUrlPathToExplicitFetch>/dashboard</BlazorWasmPrerenderingUrlPathToExplicitFetch>
+    <BlazorWasmPrerenderingEnvironment>Production</BlazorWasmPrerenderingEnvironment>
+    <BlazorWebAssemblyPreserveCollationData>false</BlazorWebAssemblyPreserveCollationData>
+    <BlazorWasmPrerenderingDeleteLoadingContents>true</BlazorWasmPrerenderingDeleteLoadingContents>
+    <BlazorWasmPrerenderingMode>WebAssemblyPrerendered</BlazorWasmPrerenderingMode>
+    <BlazorWasmPrerenderingUrlPathToExplicitFetch>/dashboard</BlazorWasmPrerenderingUrlPathToExplicitFetch>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" Version="4.4.0" />
+    <PackageReference Include="BlazorWasmPreRendering.Build" Version="3.1.0-preview.4" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.0" PrivateAssets="all" />
