--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -31,6 +31,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="./Dockerfile.yml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="./app.yml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Data\Migrations\" />
   </ItemGroup>
 
