--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -31,16 +31,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="./Dockerfile.yml">
+    <None Include="./Dockerfile">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="./app.yml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Data\Migrations\" />
   </ItemGroup>
 
 </Project>
